--- a/css/style.css
+++ b/css/style.css
@@ -1392,7 +1392,7 @@ img {
     width: 70px;
     height: 70px;
     background: var(--accent-gradient);
-    color: var(--secondary-clr);
+    color: var(--primary-clr);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -2617,8 +2617,8 @@ footer {
 .cta-glass-box {
     background: rgba(15, 23, 42, 0.85);
     /* Dark Navy Glass */
-    backdrop-filter: blur(15px);
-    -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
 }
